Issue 2269189 by eshta: Fixed nested fieldset spacing on campaign edit page.

--- a/css/personalize.admin.css
+++ b/css/personalize.admin.css
@@ -74,10 +74,7 @@ input[type="submit"].personalize-add-link:hover {
  * @todo would much rather have these simply be "x" icons -KO. 
 */
 button.personalize-delete-goal, button.personalize-delete-context {
-  padding-top: .5em;
-  padding-bottom: .5em;
-  margin-left: 0;
-  vertical-align: bottom;
+  margin-bottom: 10px;
 }
 .personalize-content-variation .personalize-admin-enumerated-item+.personalize-option-set-winner {
   border-left: 1px solid #000;
@@ -107,18 +104,15 @@ div.personalize-variation-row div.personalize-remove-context {
 .personalize-admin-content > fieldset > legend {
   padding: 1em 1em 0 1em;
 }
+.personalize-admin-content fieldset legend,
+.personalize-admin-content fieldset .fieldset-legend {
+  position: relative;
+}
 
 /** Trick to allow fieldset not to grow beyond 100% when contents are wide. */
 #personalize-agent-option-sets-form fieldset.personalize-option-set {
   min-width: 0;
   display: table-cell;
-}
-#personalize-agent-option-sets-form fieldset.personalize-option-set,
-#personalize-agent-option-sets-form fieldset.personalize-option-set legend,
-#personalize-agent-option-sets-form fieldset.personalize-option-set .fieldset-legend {
-  width: 100%;
-  display: block;
-  margin-bottom: 2em;
 }
 
 #personalize-agent-option-sets-form fieldset.personalize-option-set .fieldset-legend {
